# TwStockInformation

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jap/twstockinformation/: ExampleInstrumentedTest.java  StockUtilTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  appv2.cpp  http.cpp  http.h  native-lib.cpp
app/src/main/java/com/jap/twstockinformation/: MainActivity.java  OkhttpWrapper.kt  StockUtil.java  StockUtilV2.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/jap/twstockinformation/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
